[gd_scene load_steps=4 format=3 uid="uid://d2ye2vgmp486d"]

[ext_resource type="FontFile" uid="uid://cwbt2ugsjq30h" path="res://font/Dihil.ttf" id="1_5b1rl"]
[ext_resource type="Script" path="res://hud.gd" id="1_fgcx7"]
[ext_resource type="StyleBox" uid="uid://c4k1n4j78pa40" path="res://buttonStyle.tres" id="2_q0dup"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fgcx7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="startButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -104.0
offset_right = 115.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.878431, 0.764706, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.764706, 0.176471, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5b1rl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_q0dup")
theme_override_styles/hover = ExtResource("2_q0dup")
theme_override_styles/pressed = ExtResource("2_q0dup")
text = "start"

[node name="scoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_top = 28.0
offset_right = 24.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_5b1rl")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="messageLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -176.0
offset_right = 156.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_5b1rl")
theme_override_font_sizes/font_size = 64
text = "jogo do miguel e lucas"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="mesageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Control/startButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="mesageTimer" to="." method="_on_mesage_timer_timeout"]
